style: agregue nuevos estilos en carrito, showUsers, entregas pendientes y biblioteca

--- a/Films/src/app/components/biblioteca/biblioteca.component.html
+++ b/Films/src/app/components/biblioteca/biblioteca.component.html
@@ -41,7 +41,7 @@
   </div>
 </section>
 
-<div *ngIf="!bibliotecaVacia">
+<div *ngIf="!bibliotecaVacia" class="deuda">
   <div>Deuda: 
     <div *ngIf = "deuda == 0">
       ¡No posee deuda!
