--- a/Films/src/app/components/entregas-pendientes/entregas-pendientes.component.html
+++ b/Films/src/app/components/entregas-pendientes/entregas-pendientes.component.html
@@ -30,8 +30,8 @@
   </div>
 
   <ng-template #noPendientes>
-    <div class="box-sin-entregas">
-      <p class="sin-entregas-text">No hay entregas pendientes.</p>
+    <div class="box-empty">
+      <p class="text-empty">No hay entregas pendientes.</p>
     </div>
   </ng-template>
 </section>
