--- a/Films/src/app/components/show-users/show-users.component.html
+++ b/Films/src/app/components/show-users/show-users.component.html
@@ -4,7 +4,7 @@
     </div> 
 
     <div class="content-user" *ngIf="users.length === 0">
-        <h5>No hay usuarios aun...</h5>
+        <h5 class="paragraph">No hay usuarios aun...</h5>
     </div>  
 
     <div class="content-user" *ngFor="let user of users">
@@ -14,10 +14,14 @@
                 <h5  class="paragraph"> {{user.email}} </h5>
             </div>
             <div class="box-options">
-                <button class="button option" (click)="verBiblioteca(user.id)"> Ver Biblioteca </button>
-                <button class="button option" (click)="verPagosPendientes(user.id)"> Ver Pagos Pendientes </button>
-                <button class="button option" (click)="openDeleteUserAccountModal(user.firstName, user.lastName, user.id)">Dar de Baja</button>
-                <button class="button option" (click)="verDeuda(user.id)">Ver Deuda</button>
+                <div class="box-options-1">
+                    <button class="button option" (click)="verBiblioteca(user.id)"> Ver Biblioteca </button>
+                    <button class="button option" (click)="verPagosPendientes(user.id)"> Ver Pagos Pendientes </button>
+                </div>
+                <div class="box-options-2">
+                    <button class="button option" (click)="verDeuda(user.id)">Ver Deuda</button>
+                    <button class="button option" (click)="openDeleteUserAccountModal(user.firstName, user.lastName, user.id)">Dar de Baja</button>
+                </div>
             </div>
         </div>
     </div>
@@ -25,8 +29,8 @@
         <div class="modal-content">
           <h3 class="info-user-to-delete">Está seguro de dar de baja a {{fullnameUserToDelete}}?</h3>
           <div class="modal-buttons">
-            <button class="button" (click)="closeDeleteUserAccountModal()">Cancelar</button>
-            <button class="button" (click)="deleteUserAccount(idUserToDelete)">Confirmar</button>
+            <button class="button button-modal" (click)="closeDeleteUserAccountModal()">Cancelar</button>
+            <button class="button button-modal" (click)="deleteUserAccount(idUserToDelete)">Confirmar</button>
           </div>
         </div>
     </div>
