--- a/Films/src/app/components/admin-code/admin-code.component.html
+++ b/Films/src/app/components/admin-code/admin-code.component.html
@@ -1,7 +1,7 @@
-<div class="container d-flex justify-content-center align-items-center min-vh-100">
+<div class="container d-flex justify-content-center align-items-center box-admin-code">
     <div class="row justify-content-center">
       <div class="col-md-12">
-        <div class="card shadow-lg" style="border-radius: 1rem; width: 100%; padding: 20px; min-width: 400px; max-width: 600px;">
+        <div class="card shadow-lg card-admin-code" style="border-radius: 1rem; width: 100%; padding: 20px; min-width: 400px; max-width: 600px;">
           <div class="card-body p-5">
             <h2 class="card-title mb-4 text-center">Acceso de Administrador, se requiere código</h2>
             <form (ngSubmit)="onSubmit()" [formGroup]="codeForm">
