--- a/Films/src/app/components/biblioteca/biblioteca.component.css
+++ b/Films/src/app/components/biblioteca/biblioteca.component.css
@@ -10,13 +10,13 @@
 }
 
 .box-empty{
+    border-radius: 0.2rem;
     padding: 1rem;
     display: flex;
     align-items: center;
     justify-content: center;
-    color: black;
-    background-color: rgb(190, 190, 190);
-    box-shadow: 0px 0px 0px 10px rgb(204, 204, 204);
+    color: aliceblue;
+    background-color: #747474;
     width: max-content;
     margin: 0 auto;
     margin-block: 4rem;
@@ -24,10 +24,14 @@
 
 .text-empty{
     margin: 0%;
-    font-size: 40px;
-    font-family: 'Times New Roman', Times, serif;
+    font-size: 1.5rem;
 }
 
+.deuda{
+    color: aliceblue;
+    margin-bottom: 1rem;
+    font-size: 1.2rem;
+}
 
 * {
     text-align: center;
@@ -142,13 +146,14 @@
     transition: border 0.3s ease, border-radius 0.3s ease;
     cursor: pointer;
     color: black;
-    font-weight: 500;
-    transition: 0.3s;
+    font-weight: 450;
+    transition: 0.3s, background-color 0.3s ease;
 }
+
 
 .button:hover, 
 .button-devolucion:hover{
-    background-color: rgb(164, 164, 164);
+    background-color: #b6b6b6;
 }
 
 .button-devolucion{
