--- a/Films/src/app/components/entregas-pendientes/entregas-pendientes.component.css
+++ b/Films/src/app/components/entregas-pendientes/entregas-pendientes.component.css
@@ -98,18 +98,6 @@
     border-radius: 1rem;
 }
 
-.box-sin-entregas{
-    display: flex;
-    justify-content: center;
-    text-align: center;
-}
-
-.sin-entregas-text{
-    margin-block: 2rem;
-    text-align: center;
-    font-size: 1.2rem;
-}
-
 .box-total-carrito{
     text-align: center;
     margin-bottom: 1rem; /* Espacio entre el total y la lista de películas */
@@ -118,10 +106,11 @@
 .paragraph{
     font-size: 1.3rem;
     font-weight: 450;
+    color: aliceblue;
 }
 
 .aceptar-todas {
-    padding: 0.8rem 1.2rem;
+    padding: 0.6rem 0.8rem;
     font-size: 1.1rem;
     background-color: #4CAF50; /* Verde para indicar aceptación */
     color: white;
@@ -136,7 +125,7 @@
 }
 
 .rechazar-todas{
-    padding: 0.8rem 1.2rem;
+    padding: 0.6rem 0.8rem;
     font-size: 1.1rem;
     background-color: #c71f1f;
     color: white;
@@ -152,4 +141,22 @@
 .box-opciones-con-entrega{
     display: flex;
     justify-content: center;
+}
+
+.box-empty{
+    border-radius: 0.2rem;
+    padding: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: aliceblue;
+    background-color: #747474;
+    width: max-content;
+    margin: 0 auto;
+    margin-block: 4rem;
+}
+
+.text-empty{
+    margin: 0%;
+    font-size: 1.5rem;
 }
