--- a/Films/src/app/components/login/login.component.html
+++ b/Films/src/app/components/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="container d-flex justify-content-center align-items-center box-login">
   <div class="row justify-content-center">
     <div class="col-md-15">
-      <div class="card shadow-lg" style="border-radius: 1rem; width: 100%; padding: 20px;">
+      <div class="card shadow-lg card-login" style="border-radius: 1rem; width: 100%; padding: 20px;">
         <div class="card-body p-5">
           <h2 class="card-title mb-4 text-center">INICIAR SESIÓN</h2>
           <form class="needs-validation" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
@@ -9,7 +9,7 @@
               <label for="email" class="label-spacing">Email</label>
               <input 
                 type="text" 
-                class="form-control no-border" 
+                class="form-control no-border input" 
                 id="email" 
                 name="email" 
                 formControlName="email" 
@@ -24,7 +24,7 @@
               <div class="input-group">
                 <input 
                   [type]="mostrarContrasena ? 'text' : 'password'" 
-                  class="form-control no-border" 
+                  class="form-control no-border input" 
                   id="password" 
                   name="password" 
                   formControlName="password" 
@@ -52,13 +52,13 @@
             </div>
 
             <div class="text-center mt-3">
-              <a [routerLink]="['/registrarse']" class="text-muted text-primary">
-                ¿No tienes una cuenta? <span class="text-primary">Regístrate</span>
+              <a [routerLink]="['/registrarse']" class="text">
+                ¿No tienes una cuenta? <span class="text-registrate">Regístrate</span>
               </a>
             </div>
 
             <div class="text-center mt-3">
-              <a [routerLink]="['/recuperar-contrasena']" class="text-muted text-primary">
+              <a [routerLink]="['/recuperar-contrasena']" class="text forget-password">
                 ¿Olvidaste tu contraseña?
               </a>
             </div>
