--- a/Films/src/app/components/perfil/perfil.component.css
+++ b/Films/src/app/components/perfil/perfil.component.css
@@ -1,8 +1,9 @@
 * {
-    background-color: #f0f0f0;
+    background-color: transparent;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    color: rgb(215, 219, 223);
 }
 
 #titulo, #detalles-del-user, #configuracion, #componentes-con-opciones, #detalles {
@@ -16,7 +17,7 @@
 .profile{
     display: grid;
     justify-content: center;
-    margin-bottom: 1rem;
+    margin-block: 1rem;
 }
 
 .box-opciones-tarjeta{
@@ -224,8 +225,8 @@
     left: 50%; /* Centra horizontalmente */
     transform: translate(-50%, -50%); /* Ajusta el centro real */
     z-index: 1000;
-    background-color: rgba(0, 0, 0, 0.8); 
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Sombra */ 
+    background-color: rgba(51, 51, 51, 0.8); 
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     padding: 2rem; /* Espaciado alrededor del formulario */
     border-radius: 10px;
 }
@@ -276,16 +277,14 @@
 
 #input-password::placeholder{
     color: grey;
-    padding: 0.4rem;
+    padding: 0.2rem;
     background-color: aliceblue;
-    letter-spacing: 0.1rem;
 }
 
 #input-password:focus{
     color: grey;
-    padding: 0.4rem;
+    padding: 0.2rem;
     background-color: aliceblue;
-    letter-spacing: 0.1rem;
 }
 
 .button{
@@ -323,14 +322,16 @@
 .box-tarjetas,
 .box-logout{
     padding-block: 0.4rem;
-    padding-inline: 2rem;
+    padding-inline: 8rem;
+    margin-bottom: 0.2rem;
+    background-color: #545454;
 }
 
 .box-mi-perfil{
     padding-top: 0.4rem;
     padding-bottom: 0.2rem;
     margin-bottom: 0.2rem;
-    border-bottom: 0.1rem solid black;
+    color: aliceblue;
 }
 
 .contenido-datos-domicilios,
@@ -354,7 +355,7 @@
     border: 1px solid transparent;
     transition: border 0.3s ease, border-radius 0.3s ease;
     cursor: pointer;
-    color: white;
+    color: #141414;
 }
 
 .logout{
@@ -426,7 +427,7 @@
     align-items: center;
     margin: 0%;
     margin-top: 0.2rem;
-    color: rgb(103, 95, 95);
+    color: rgb(206, 198, 198);
 }
 
 .edit{
@@ -464,10 +465,11 @@
     width: max-content;
     outline: none;
     border: none;
-    border-bottom: 0.1rem black solid;
+    border-bottom: 0.1rem  #747474 solid;
     text-align: center;
-    color: rgb(97, 97, 97);
+    color: aliceblue;
     width: 13rem;
+    font-size: 1.1rem;
 }
 
 .modal-overlay {
@@ -478,6 +480,9 @@
     justify-content: center;
     align-items: center;
     z-index: 1000;
+
+    background-color: rgba(51, 51, 51, 0.8); 
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   }
   
   .modal-content {
@@ -502,13 +507,13 @@
   
   .confirm-button-logout {
     background-color: rgb(130, 130, 130);
-    color: white;
+    color: #141414;
     border: none;
   }
   
   .cancel-button-logout {
     background-color: rgb(130, 130, 130);
-    color: white;
+    color: #141414;
     border: none;
   }
 
@@ -565,4 +570,13 @@
 
 .bi-eye{
     background-color: transparent;
+}
+
+.icon {
+    width: 55px;
+    height: 55px;
+}
+
+.path-icon{
+    color: #141414;
 }
