--- a/Films/src/app/components/tarjeta/tarjeta.component.css
+++ b/Films/src/app/components/tarjeta/tarjeta.component.css
@@ -2,6 +2,10 @@
     text-align: center !important;
 }
 
+h4{
+    color: aliceblue;
+}
+
 .margenBoton {
     margin-top: 20px;
 }
@@ -311,4 +315,8 @@
 
 .cancel{
     margin-right: 1rem;
+}
+
+.box-alert{
+    margin-block: 1rem;
 }
