--- a/Films/src/app/components/pago-deuda/pago-deuda.component.html
+++ b/Films/src/app/components/pago-deuda/pago-deuda.component.html
@@ -1,41 +1,51 @@
-<div>Deuda de <div *ngIf = "user">{{user.firstName}}</div>
-<div *ngIf = "!user">USUARIO NO ENCONTRADO</div>
+<div class="box-datos-user"> 
+  <h3 class="user-data" *ngIf = "user">DEUDA DE {{user.firstName?.toUpperCase()}} {{user.lastName?.toUpperCase()}} </h3>
+  <h3 class="user-data" *ngIf = "!user">USUARIO NO ENCONTRADO</h3>
 </div>
-<div>
-    {{deuda}}
-    <button *ngIf = "payDeuda && deuda != 0" (click) = "toggleSaldarDeuda()">
-        Saldar Deuda
-    </button>
+<div class="box-deuda">
+    <div class="box-option-deuda">
+      <p class="total-deuda">Total: ${{deuda}}</p>
+      <button class="button" *ngIf = "payDeuda && deuda != 0" (click) = "toggleSaldarDeuda()">
+          Saldar Deuda
+      </button>
+    </div>
 
-    <div *ngIf = "saldarDeuda">
-        <button (click) = "pagoEfectivo()">Pago en Efectivo</button>
-        <div class="alert alert-success mt-3" *ngIf="successMessage">
-            {{ successMessage }}
+    <div class="box-saldar-deuda" *ngIf = "saldarDeuda">
+
+        <div class="box-saldar-deuda-efectivo">
+          <button class="button" (click) = "pagoEfectivo()">Pago en Efectivo</button>
+          <div class="alert alert-success mt-3 successMessage" *ngIf="successMessage">
+              {{ successMessage }}
+          </div>
         </div>
-        <button (click) = "pagoTarjeta()">Pago con Tarjeta</button>
-        <div *ngIf = "hadCard">
-            <div>Desea pagar con la tarjeta cargada?</div>
-            <div class="tarjeta">
-                <div class="chip"></div>
-                <div class="box-datos">
-                  <p class="dato-tarjeta nTarjeta"> **** **** **** {{lastFourDigits}}</p>
-                </div>
-                <div class="box-datos">
-                  <p class="dato-tarjeta vencimiento">{{ user?.tarjeta?.fechaVencimiento }}</p>
-                </div>
-                <div class="last-data">
-                  <div class="box-fullname">
-                    <div class="box-datos">
-                      <p class="dato-tarjeta fullname">{{user?.tarjeta?.firstName}}</p>
-                    </div>
-                    <div class="box-datos">
-                      <p class="dato-tarjeta fullname">{{user?.tarjeta?.lastName}}</p>
-                    </div>
+
+        <div class="box-saldar-deuda-tarjeta">
+          <div class="box-button-card">
+            <button class="button" (click) = "pagoTarjeta()">Pago con Tarjeta</button>
+          </div>
+          <div class="box-card" *ngIf = "hadCard">
+              <p class="paragraph">Desea pagar con la tarjeta cargada?</p>
+              <div class="tarjeta">
+                  <div class="chip"></div>
+                  <div class="box-datos">
+                    <p class="dato-tarjeta nTarjeta"> **** **** **** {{lastFourDigits}}</p>
                   </div>
-                  <div class="dato-tarjeta tipo-tarjeta"><img [ngClass]="imgTypeCardClass" src="{{typeCard}}" alt=""></div>
+                  <div class="box-datos">
+                    <p class="dato-tarjeta vencimiento">{{ user?.tarjeta?.fechaVencimiento }}</p>
+                  </div>
+                  <div class="last-data">
+                    <div class="box-fullname">
+                      <div class="box-datos">
+                        <p class="dato-tarjeta fullname">{{user?.tarjeta?.firstName}}</p>
+                      </div>
+                      <div class="box-datos">
+                        <p class="dato-tarjeta fullname">{{user?.tarjeta?.lastName}}</p>
+                      </div>
+                    </div>
+                    <div class="dato-tarjeta tipo-tarjeta"><img [ngClass]="imgTypeCardClass" src="{{typeCard}}" alt=""></div>
+                  </div>
                 </div>
-              </div>
+          </div>
         </div>
-
     </div>
 </div>
