fix: solucione un warning de navbar component y que no se listen de forma duplicada las films en el inicio

--- a/Films/src/app/components/pago-deuda/pago-deuda.component.html
+++ b/Films/src/app/components/pago-deuda/pago-deuda.component.html
@@ -1,5 +1,5 @@
 <div class="box-datos-user"> 
-  <h3 class="user-data" *ngIf = "user">DEUDA DE {{user.firstName?.toUpperCase()}} {{user.lastName?.toUpperCase()}} </h3>
+  <h3 class="user-data" *ngIf = "user">DEUDA DE {{user.firstName.toUpperCase()}} {{user.lastName.toUpperCase()}} </h3>
   <h3 class="user-data" *ngIf = "!user">USUARIO NO ENCONTRADO</h3>
 </div>
 <div class="box-deuda">
